# lantern

./: .env.example  .gitignore  LICENSE  MORNING-REPORT.md  NEXT-STEPS.md  OPEN-QUESTIONS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
.github/workflows/: desktop-build.yml
.nogra/: .gitignore  README.md  config.json
.nogra/briefs/: brief-lantern-v0.1-phase-1-foundation-scaffold-nav-shell-single-provider-strea-2026-06-05-587ac5.md  brief-lantern-v0.1-phase-2a-multi-provider-selector-2026-06-05-2a7c10.md  brief-lantern-v0.1-phase-2b-real-crud-for-notes-tasks-2026-06-05-172e43.md  brief-lantern-v0.1-phase-2c-documents-upload-list-text-extraction-2026-06-05-ce5def.md  brief-lantern-v1-phase-3a-tauri-desktop-spike-prove-packaging-with-python-side-2026-06-05-21afee.md  brief-lantern-v1-windows-desktop-installer.md
.nogra/briefs/drafts/: brief-lantern-v0.1-phase-1-foundation-scaffold-nav-shell-single-provider-strea-2026-06-05-587ac5.json  brief-lantern-v0.1-phase-2a-multi-provider-selector-2026-06-05-2a7c10.json  (+10 more)
.nogra/index/: workspaces.jsonl
.nogra/state/: CURRENT-TASKS.md  DECISIONS.md  PROJECT-STRUCTURE.md  SESSION-CHECKPOINT.md
.nogra/transport/: events.jsonl
apps/api/: README.md  lantern-api.spec  main.py  requirements.txt  run.py  test_main.py
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.ts  package.json
(+53 files in other folders)
