[package]
name = "lantern-desktop"
version = "1.0.1"
description = "Lantern desktop app — Tauri shell with Python sidecar"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lantern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Used by the SIGTERM-based sidecar cleanup on macOS/Linux (see lib.rs).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
